syntax = "proto3";

option csharp_namespace = "Serviceone";

package greet;

// The greeting service definition.
service Average {
  // Sends a greeting
  rpc GetAverage (AverageRequest) returns (AverageReply) {}
  
}

// The request message containing the user's name.
message AverageRequest {
  repeated int32 numbers = 1; // List<int> numbers
}

// The response message containing the greetings
message AverageReply {
  float average = 1; // float average
}




